sources/overleaf/templates/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/overleaf: "true"
        io.kompose.service: mongo
    spec:
      nodeName: kubenode1
      containers:
      - image: mongo:latest
        imagePullPolicy: ""
        #livenessProbe:
        #  exec:
        #    command:
        #    - echo 'db.stats().ok' | mongo localhost:27017/test --quiet
        #  failureThreshold: 5
        #  periodSeconds: 10
        #  timeoutSeconds: 10
        name: mongo
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongo-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mongo-claim0
        persistentVolumeClaim:
          claimName: mongo-claim0
status: {}
