sources/overleaf/templates/web-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: web
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/web: "true"
  podSelector:
    matchLabels:
      io.kompose.network/web: "true"
